Bug 150028 - Err:502 on formats with absolute seconds and millis
Summary: Err:502 on formats with absolute seconds and millis
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Laurent Balland
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: Number-Format
  Show dependency treegraph
 
Reported: 2022-07-17 23:49 UTC by SheetJS
Modified: 2025-01-04 08:34 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description SheetJS 2022-07-17 23:49:41 UTC
Description:
Formats like `[ss].0` elicit error 502

Steps to Reproduce:
Set cell A1 to the formula =TEXT(1,"[ss].0")

Actual Results:
Err:502

Expected Results:
Cell A1 is 86400.0


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Affects formats [ss].0 , [ss].00 , [ss].000 (all valid in Excel)
Comment 1 m_a_riosv 2022-07-18 10:37:18 UTC
Repro with
Version: 7.4.0.1 (x64) / LibreOffice Community
Build ID: 43e5fcfbbadd18fccee5a6f42ddd533e40151bcf
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL

Seems, if there is no '0' after [ss] doesn't happen.
Comment 2 Eike Rathke (retired, only occasionally showing up) 2023-04-24 15:54:22 UTC
Note that the number formatter (Format -> Cells..., Numbers) does not accept such [SS].0 format code either.
Comment 3 Commit Notification 2023-05-26 16:20:41 UTC
Laurent Balland committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6dd2ebbba23b20864d3cf74322540c628088375c

tdf#150028 Treat decimal separator after [SS]

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 BogdanB 2023-05-26 17:18:29 UTC
I tested changes from comment 3 and not working in
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: a83643dea9f5922d4706c9e1d8b9f53f71eb01d9
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

The formula =TEXT(1"[ss].0") is giving the same error: Err:509.
Comment 5 Eike Rathke (retired, only occasionally showing up) 2023-05-26 17:34:18 UTC
Obviously that formula is not correct and should had been
=TEXT(1;"[ss].0")
instead (note the function parameter separator). Also, Err:509 is not the same as Err:502 ...
Comment 6 BogdanB 2023-05-26 17:39:28 UTC
Eike, thanks for your quick answer. Retested now:
With this formula
=TEXT(1;"[ss].0")

I get
86400,0
in Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 370533da3f07169791c0a17013ca55c57df2f3c9
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

I get
Err:502
in Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

So, I will mark this bug as Verified after Resolved. 
Thanks to all involved here.
Comment 7 BogdanB 2023-05-27 08:15:56 UTC
Verified with
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 370533da3f07169791c0a17013ca55c57df2f3c9
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded